# ha-swegon-casa-smart-access

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  lint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
custom_components/swegon_casa/: __init__.py  client.py  climate.py  config_flow.py  const.py  lib.py  manifest.json  number.py  select.py  sensor.py  strings.json
tests/: test_integration.py
